feat(dop): merge code

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -49,30 +49,9 @@
     "6 to 32 digits, must contain letters in uppercase and lowercase and numbers": "8 to 32 digits, including both uppercase letters, lowercase letters, and numbers",
     "After successful setting, the system will automatically renew as set.": "after the setting is successful, the system will automatically renew the fee at this time",
     "Alibaba Cloud container service cluster": "Alibaba Cloud container service cluster",
-    "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "A region can include multiple zones (availability zones) with independent power supply and network connectivity, Zones in the same VPC are connected to the same internal network, Zones are isolated from failures in other zones",
-    "resource overview": "resource overview",
-    "resource distribute": "resource distribute",
-    "Allocated resources: The resources reserved by project resource Quota are configured": "Allocated resources: The resources reserved by project resource Quota are configured",
-    "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request": "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request",
-    "Node conversion formula": "Node conversion formula",
-    "Core": "Core",
-    "one node": "one node",
-    "Memory": "Memory",
-    "Number of converted nodes": "Number of converted nodes",
-    "Water Level": "Water Level",
-    "Memory Water Level": "Memory Water Level",
-    "Description": "Description",
-    "Owner": "Owner",
+    "Allocated resources&#58; The resources reserved by project resource Quota are configured": "Allocated resources: The resources reserved by project resource Quota are configured",
     "Allocation of project resources": "Allocation of project resources",
-    "The total number of selected resources": "The total number of selected resources",
-    "Conversion nodes": "Conversion nodes",
-    "Total": "Total",
-    "Trend of cluster resources": "Trend of cluster resources",
-    "Daily": "Daily",
-    "Weekly": "Weekly",
-    "Monthly": "Monthly",
-    "save": "save",
-    "Project": "Project",
+    "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "A region can include multiple zones (availability zones) with independent power supply and network connectivity, Zones in the same VPC are connected to the same internal network, Zones are isolated from failures in other zones",
     "Basic Information": "Basic Information",
     "Bip segment": "Bip segment",
     "CID and GID are reserved fields of Group ID. Topic cannot start with CID and GID.": "&quot;CID&quot; and &quot;GID&quot; are reserved fields of Group ID",
@@ -86,9 +65,13 @@
     "Clean up at 3am every day": "Clean up at 3am every day",
     "Cloud Account": "Cloud Account",
     "Composed of lowercase letters, numbers, underscores and hyphens, started with letter and ended with letter or number, 2~64 characters": "composed of lowercase letters, numbers _, beginning with a letter, ending with a letter or number, up to 5-32 characters",
+    "Conversion nodes": "Conversion nodes",
+    "Core": "Core",
     "DDL only": "DDL only",
     "DML only": "DML only",
     "DNS server": "DNS server",
+    "Daily": "Daily",
+    "Description": "Description",
     "Disk usage": "Disk usage",
     "Disk usage rate": "Disk usage rate",
     "ECS status distribution": "ECS status distribution",
@@ -107,6 +90,9 @@
     "Kubectl command": "Kubectl command",
     "MEM allocation": "MEM allocation",
     "MEM usage": "MEM usage",
+    "Memory": "Memory",
+    "Memory Water Level": "Memory Water Level",
+    "Monthly": "Monthly",
     "MySQL Erda database": "MySQL Erda database",
     "MySQL Host": "MySQL Host",
     "MySQL Password": "MySQL Password",
@@ -119,12 +105,16 @@
     "No results found? Please try other keywords to search.": "do not find the result you want? please try another keyword search",
     "No service expire within {num} days.": "No service expire within {num} days.",
     "Node List": "Node List",
+    "Node conversion formula": "Node conversion formula",
     "Notification group does not exist or has been remove. Please change one.": "Notification group does not exist or has been remove. Please change one.",
+    "Number of converted nodes": "Number of converted nodes",
     "O & M dashboard": "O & M dashboard",
     "O&M dashboard added successfully": "O&M dashboard added successfully",
     "O&M dashboard updated successfully": "O&M dashboard updated successfully",
     "OSS Overview": "OSS Overview",
+    "Occupied resource&#58; The portion of allocated resource actually occupied by Kubernetes Request resource Request": "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request",
     "Operation log retention days": "Operation log retention days",
+    "Owner": "Owner",
     "Pay-As-You-Go": "Pay-As-You-Go",
     "Please enter the IP, separated by pressing Enter or semicolons, up to 5 allowed": "please enter the IP, you can separate by press enter or ‘;’ fill up to 5",
     "Please enter the cluster identity to confirm to go offline.": "Please enter the cluster identity to confirm to go offline.",
@@ -139,6 +129,7 @@
     "Please select the maximum number of queries": "Please select the maximum number of queries",
     "Pod network segment": "Pod network segment",
     "Pods List": "Pods List",
+    "Project": "Project",
     "SSD cloud": "SSD cloud",
     "Service network segment": "Service network segment",
     "Set the cluster oversold ratio. If the oversold ratio is 2, then 1 core CPU is used as 2 cores.": "Set the cluster oversold ratio. If the oversold ratio is 2, then 1 core CPU is used as 2 cores.",
@@ -149,6 +140,9 @@
     "The expected value of filter rule is required.": "The expected value of filter rule is required.",
     "The last deployment information has been initialized. Please click the reset button at the bottom if unnecessary.": "The last deployment information has been initialized for you. If you don't need it, please click the reset button at the bottom.",
     "The number of IPs should be a multiple of the number of copies.": "The number of IPs should be a multiple of the number of copies.",
+    "The total number of selected resources": "The total number of selected resources",
+    "Total": "Total",
+    "Trend of cluster resources": "Trend of cluster resources",
     "Use must have root permissions to initialize the machine.": "users used to initialize the machine need to have root privileges",
     "VIP segment": "VIP segment",
     "VPC": "VPC",
@@ -156,10 +150,11 @@
     "VPC network segment": "VPC network segment",
     "VPC network segment addition method": "VPC network segment addition method",
     "VSwitches": "VSwitches",
+    "Water Level": "Water Level",
+    "Weekly": "Weekly",
     "Western United States": "Western United States",
     "Workload": "Workload",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the company through this link",
-    "abnormal machine": "abnormal machine",
     "absolute path for local data storage": "absolute path for local data storage",
     "absolute path of mount point": "absolute path of mount point",
     "absolute path starts with /": "absolute path starts with /",
@@ -496,6 +491,7 @@
     "number of products": "number of products",
     "number of references": "number of references",
     "offline": "offline",
+    "one node": "one node",
     "online": "online",
     "operating system": "operating system",
     "operation": "operation",
@@ -612,10 +608,11 @@
     "report type": "report type",
     "reset": "reset",
     "reset Token": "reset Token",
+    "resource distribute": "resource distribute",
     "resource expire soon": "resource expire soon",
     "resource information": "resource information",
     "resource monitor": "resource monitor",
-    "resource statistics": "resource statistics",
+    "resource overview": "resource overview",
     "resource type": "resource type",
     "restart times": "restart times",
     "return to modify": "return to modify",
@@ -626,6 +623,7 @@
     "run cluster": "run cluster",
     "running cluster": "running cluster",
     "running environment": "running environment",
+    "save": "save",
     "scale": "scale",
     "schedulable": "schedulable",
     "search by IP": "search by IP",
@@ -645,7 +643,6 @@
     "separate multiple tags with a comma": "separate multiple tags with a comma",
     "service IP list": "service IP list",
     "service basic parameters": "service basic parameters",
-    "services": "services",
     "set tags of {ip}": "set tags of {ip}",
     "set up successfully, wait for a while to take effect": "set up successfully, wait for a while to take effect",
     "shared storage": "shared storage",
@@ -2512,7 +2509,6 @@
     "please enter description within 100 characters": "please enter description within 100 characters",
     "please enter http status code ": "please enter http status code ",
     "please enter the api already in the endpoint": "please enter the api already in the endpoint",
-    "please enter the correct JSON format": "please enter the correct JSON format",
     "please enter your email address, separated by comma": "please enter your email address, separated by “,”",
     "please key in numbers": "please key in numbers",
     "please select a domain": "please select a domain",
