--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -49,33 +49,11 @@
     "6 to 32 digits, must contain letters in uppercase and lowercase and numbers": "8到32位，需同时包含大写字母、小写字母和数字",
     "After successful setting, the system will automatically renew as set.": "设置成功后，系统自动以此时长进行续费",
     "Alibaba Cloud container service cluster": "阿里云容器服务集群",
+    "Allocated resources&#58; The resources reserved by project resource Quota are configured": "已分配资源&#58; 按照项目资源 Quota 配置所预留出的资源",
+    "Allocation of project resources": "项目资源分布",
     "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "可用区是指在同一地域内，电力和网络互相独立的物理区域。在同一专有网络内可用区与可用区之间内网互通，可用区之间能做到故障隔离。",
     "Basic Information": "基本信息",
-    "resource overview": "资源总览",
-    "resource distribute": "资源分布",
-    "Allocated resources: The resources reserved by project resource Quota are configured": "已分配资源&#58; 按照项目资源 Quota 配置所预留出的资源",
-    "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request": "已占用资源&#58; 已分配资源中，实际通过 Kubernetes 的 Request 资源申请方式占用的部分",
-    "Node conversion formula": "节点转换公式",
-    "Core": "核",
-    "one node": "一个节点",
-    "Memory": "内存",
-    "Number of converted nodes": "转换节点数",
-    "Water Level": "水位",
-    "Memory Water Level": "内存水位",
-    "Description": "描述",
-    "Owner": "负责人",
-    "Allocation of project resources": "项目资源分布",
-    "The total number of selected resources": "筛选项资源总和",
-    "Conversion nodes": "转换节点",
-    "Total": "总计",
-    "Trend of cluster resources": "集群资源变化趋势",
-    "Daily": "每天",
-    "Weekly": "每周",
-    "Monthly": "每月",
-    "save": "保存",
-    "Project": "项目",
     "Bip segment": "Bip网段",
->>>>>>> 7452469b (feat(cmp): remove org ns)
     "CID and GID are reserved fields of Group ID. Topic cannot start with CID and GID.": "“CID”和“GID”是Group ID的保留字段，Topic不能以“CID”和“GID”开头",
     "CIDR": "网段",
     "CIDR segment": "CIDR网段",
@@ -87,9 +65,13 @@
     "Clean up at 3am every day": "每天凌晨3点执行清理",
     "Cloud Account": "云账户",
     "Composed of lowercase letters, numbers, underscores and hyphens, started with letter and ended with letter or number, 2~64 characters": "由小写字母、数字、下划线组成，字母开头，字母或数字结尾，5~32个字符",
+    "Conversion nodes": "转换节点",
+    "Core": "核",
     "DDL only": "仅DDL",
     "DML only": "仅DML",
     "DNS server": "DNS服务器",
+    "Daily": "每天",
+    "Description": "描述",
     "Disk usage": "磁盘使用",
     "Disk usage rate": "磁盘使用率",
     "ECS status distribution": "云主机状态分布",
@@ -108,6 +90,9 @@
     "Kubectl command": "Kubectl 命令行",
     "MEM allocation": "内存分配",
     "MEM usage": "内存使用",
+    "Memory": "内存",
+    "Memory Water Level": "内存水位",
+    "Monthly": "每月",
     "MySQL Erda database": "MySQL Erda数据库名",
     "MySQL Host": "MySQL主机",
     "MySQL Password": "MySQL密码",
@@ -120,12 +105,16 @@
     "No results found? Please try other keywords to search.": "没找到想要的结果？请尝试其他关键字搜索",
     "No service expire within {num} days.": "{num}天内无到期服务，请放心使用",
     "Node List": "节点列表",
+    "Node conversion formula": "节点转换公式",
     "Notification group does not exist or has been remove. Please change one.": "通知组不存在或已被移除，可更换通知组",
+    "Number of converted nodes": "转换节点数",
     "O & M dashboard": "运维大盘",
     "O&M dashboard added successfully": "添加运维大盘成功",
     "O&M dashboard updated successfully": "更新运维大盘成功",
     "OSS Overview": "OSS 总览",
+    "Occupied resource&#58; The portion of allocated resource actually occupied by Kubernetes Request resource Request": "已占用资源&#58; 已分配资源中，实际通过 Kubernetes 的 Request 资源申请方式占用的部分",
     "Operation log retention days": "操作日志保留天数",
+    "Owner": "负责人",
     "Pay-As-You-Go": "按量付费",
     "Please enter the IP, separated by pressing Enter or semicolons, up to 5 allowed": "请输入IP,可以回车或;分隔，最多填写5个",
     "Please enter the cluster identity to confirm to go offline.": "请输入集群标识确认下线",
@@ -140,6 +129,7 @@
     "Please select the maximum number of queries": "请选择最大查询条数",
     "Pod network segment": "Pod网段",
     "Pods List": "Pods 列表",
+    "Project": "项目",
     "SSD cloud": "SSD云盘",
     "Service network segment": "Service网段",
     "Set the cluster oversold ratio. If the oversold ratio is 2, then 1 core CPU is used as 2 cores.": "设置集群超买比,如超买比为2，即1核CPU当2核用",
@@ -150,6 +140,9 @@
     "The expected value of filter rule is required.": "过滤规则的预期值必填",
     "The last deployment information has been initialized. Please click the reset button at the bottom if unnecessary.": "已为您初始化上次部署信息，若不需要，请点击最下方重置按钮",
     "The number of IPs should be a multiple of the number of copies.": "IP个数应为副本数的倍数",
+    "The total number of selected resources": "筛选项资源总和",
+    "Total": "总计",
+    "Trend of cluster resources": "集群资源变化趋势",
     "Use must have root permissions to initialize the machine.": "用于初始化机器的用户，需要有 root 权限",
     "VIP segment": "VIP网段",
     "VPC": "专有网络",
@@ -157,10 +150,11 @@
     "VPC network segment": "VPC网段",
     "VPC network segment addition method": "VPC网段添加方式",
     "VSwitches": "交换机",
+    "Water Level": "水位",
+    "Weekly": "每周",
     "Western United States": "美国西部",
     "Workload": "工作负载",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "您可以将链接分享至QQ、微信、钉钉等工作群，同事们通过此链接即可加入组织",
-    "abnormal machine": "异常机器",
     "absolute path for local data storage": "本地数据存储绝对路径",
     "absolute path of mount point": "挂载点绝对路径",
     "absolute path starts with /": "绝对路径以 / 开头",
@@ -497,6 +491,7 @@
     "number of products": "产品数量",
     "number of references": "引用数",
     "offline": "下线",
+    "one node": "一个节点",
     "online": "在线",
     "operating system": "操作系统",
     "operation": "操作",
@@ -613,10 +608,11 @@
     "report type": "报告类型",
     "reset": "重置",
     "reset Token": "重置Token",
+    "resource distribute": "资源分布",
     "resource expire soon": "即将过期资源",
     "resource information": "资源信息",
     "resource monitor": "资源监控",
-    "resource statistics": "资源统计",
+    "resource overview": "资源总览",
     "resource type": "资源类型",
     "restart times": "重启次数",
     "return to modify": "返回修改",
@@ -627,6 +623,7 @@
     "run cluster": "运行集群",
     "running cluster": "运行集群",
     "running environment": "运行环境",
+    "save": "保存",
     "scale": "扩缩容",
     "schedulable": "可调度",
     "search by IP": "输入IP搜索",
@@ -646,7 +643,6 @@
     "separate multiple tags with a comma": "以逗号,分隔多个标签",
     "service IP list": "服务端IP列表",
     "service basic parameters": "服务基本参数",
-    "services": "服务列表",
     "set tags of {ip}": "设置{ip}的标签",
     "set up successfully, wait for a while to take effect": "设置成功，稍等片刻生效",
     "shared storage": "共享存储",
@@ -2513,7 +2509,6 @@
     "please enter description within 100 characters": "请输入100字以内的描述",
     "please enter http status code ": "请输入http状态码",
     "please enter the api already in the endpoint": "请输入流量入口中已存在API",
-    "please enter the correct JSON format": "请输入正确的 JSON 格式",
     "please enter your email address, separated by comma": "请输入邮箱地址，用“,”分隔",
     "please key in numbers": "请输入数字",
     "please select a domain": "请选择域名",
