fix: i18n / chart yAxis label length

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -585,36 +585,19 @@
     "6 to 32 digits, consisting of letters, numbers and underscores": "6 to 32 digits, consisting of letters, numbers and underscores",
     "6 to 32 digits, must contain letters in uppercase and lowercase and numbers": "8 to 32 digits, including both uppercase letters, lowercase letters, and numbers",
     "After successful setting, the system will automatically renew as set.": "after the setting is successful, the system will automatically renew the fee at this time",
-    "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "A region can include multiple zones (availability zones) with independent power supply and network connectivity, Zones in the same VPC are connected to the same internal network, Zones are isolated from failures in other zones",
-    "resource overview": "resource overview",
-    "resource distribute": "resource distribute",
-    "Allocated resources: The resources reserved by project resource Quota are configured": "Allocated resources: The resources reserved by project resource Quota are configured",
-    "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request": "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request",
-    "Node conversion formula": "Node conversion formula",
-    "Core": "Core",
-    "one node": "one node",
-    "Memory": "Memory",
-    "Number of converted nodes": "Number of converted nodes",
-    "Water Level": "Water Level",
-    "Memory Water Level": "Memory Water Level",
-    "Description": "Description",
-    "Owner": "Owner",
+    "Allocated resources&#58; The resources reserved by project resource Quota are configured": "Allocated resources: The resources reserved by project resource Quota are configured",
     "Allocation of project resources": "Allocation of project resources",
-    "The total number of selected resources": "The total number of selected resources",
-    "Conversion nodes": "Conversion nodes",
-    "Total": "Total",
-    "Trend of cluster resources": "Trend of cluster resources",
-    "Daily": "Daily",
-    "Weekly": "Weekly",
-    "Monthly": "Monthly",
-    "save": "save",
-    "Project": "Project",
+    "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "A region can include multiple zones (availability zones) with independent power supply and network connectivity, Zones in the same VPC are connected to the same internal network, Zones are isolated from failures in other zones",
     "Basic Information": "Basic Information",
     "CID and GID are reserved fields of Group ID. Topic cannot start with CID and GID.": "&quot;CID&quot; and &quot;GID&quot; are reserved fields of Group ID",
     "CIDR": "CIDR",
     "CIDR-tips": "the CIDR block cannot be modified after it is set. You can use 192.168.0.0/16, 172.16.0.0/12, 10.0.0.0/8, or their subnets as the CIDR blocks of VPCs. The CIDR block mask must be 8 to 24 bits in length. An example of a CIDR block is 192.168.0.0/16. ",
     "Cloud Account": "Cloud Account",
     "Composed of lowercase letters, numbers, underscores and hyphens, started with letter and ended with letter or number, 2~64 characters": "composed of lowercase letters, numbers _, beginning with a letter, ending with a letter or number, up to 5-32 characters",
+    "Conversion nodes": "Conversion nodes",
+    "Core": "Core",
+    "Daily": "Daily",
+    "Description": "Description",
     "ECS status distribution": "ECS status distribution",
     "ESC billing method": "ESC billing method",
     "Event Log": "Event Log",
@@ -623,22 +606,34 @@
     "GroupID-cannot-modified": "once the GroupID is created, it cannot be modified.",
     "Instance is not ready": "Instance is not ready",
     "Kubectl command": "Kubectl command",
+    "Memory": "Memory",
+    "Memory Water Level": "Memory Water Level",
+    "Monthly": "Monthly",
     "NAS address": "NAS address",
     "No service expire within {num} days.": "No service expire within {num} days.",
     "Node List": "Node List",
+    "Node conversion formula": "Node conversion formula",
+    "Number of converted nodes": "Number of converted nodes",
     "OSS Overview": "OSS Overview",
+    "Occupied resource&#58; The portion of allocated resource actually occupied by Kubernetes Request resource Request": "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request",
+    "Owner": "Owner",
     "Please select the maximum number of queries": "Please select the maximum number of queries",
     "Pods List": "Pods List",
+    "Project": "Project",
     "Southeast Asia Pacific": "Southeast Asia Pacific",
     "Southern China": "Southern China",
+    "The total number of selected resources": "The total number of selected resources",
+    "Total": "Total",
+    "Trend of cluster resources": "Trend of cluster resources",
     "Use must have root permissions to initialize the machine.": "users used to initialize the machine need to have root privileges",
     "VPC": "VPC",
     "VPC Label": "VPC Label",
     "VPC network segment addition method": "VPC network segment addition method",
     "VSwitches": "VSwitches",
+    "Water Level": "Water Level",
+    "Weekly": "Weekly",
     "Western United States": "Western United States",
     "Workload": "Workload",
-    "abnormal machine": "abnormal machine",
     "absolute path starts with /": "absolute path starts with /",
     "account name": "account name",
     "add Alibaba Cloud Container Service Cluster (Hosted Version)": "add Alibaba Cloud Container Service Cluster (Hosted Version)",
@@ -795,6 +790,7 @@
     "number of clusters": "number of clusters",
     "number of nodes": "number of nodes",
     "offline": "offline",
+    "one node": "one node",
     "online": "online",
     "operating system": "operating system",
     "org overview": "dashboard",
@@ -834,6 +830,7 @@
     "process read and write times": "process read and write times",
     "processing": "processing",
     "production environment": "production environment",
+    "project": "project",
     "project label": "project label",
     "public read": "public read",
     "public read and write": "public read and write",
@@ -850,12 +847,14 @@
     "related pod information": "related pod information",
     "reset": "reset",
     "reset Token": "reset Token",
+    "resource distribute": "resource distribute",
     "resource expire soon": "resource expire soon",
     "resource information": "resource information",
     "resource monitor": "resource monitor",
-    "resource statistics": "resource statistics",
+    "resource overview": "resource overview",
     "resource type": "resource type",
     "return to modify": "return to modify",
+    "save": "save",
     "scale": "scale",
     "schedulable": "schedulable",
     "search by IP": "search by IP",
@@ -867,7 +866,6 @@
     "self-built cluster": "self-built cluster",
     "separate by comma": "separate by comma",
     "separate multiple tags with a comma": "separate multiple tags with a comma",
-    "services": "services",
     "set tags of {ip}": "set tags of {ip}",
     "shared storage": "shared storage",
     "silicon valley": "silicon valley",
@@ -893,7 +891,6 @@
     "support character set": "support character set",
     "switch network segment addition method": "switch network segment addition method",
     "system disk": "system disk",
-    "task list": "task list",
     "test environment": "test environment",
     "the CIDR block cannot be modified after it is set": "the CIDR block cannot be modified after it is set",
     "tips": "tips",
@@ -1564,7 +1561,6 @@
     "please enter description within 100 characters": "please enter description within 100 characters",
     "please enter http status code ": "please enter http status code ",
     "please enter the api already in the endpoint": "please enter the api already in the endpoint",
-    "please enter the correct JSON format": "please enter the correct JSON format",
     "please enter your email address, separated by comma": "please enter your email address, separated by “,”",
     "please key in numbers": "please key in numbers",
     "please select a domain": "please select a domain",
