--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -585,36 +585,19 @@
     "6 to 32 digits, consisting of letters, numbers and underscores": "6到32位，由字母数字下划线组成",
     "6 to 32 digits, must contain letters in uppercase and lowercase and numbers": "8到32位，需同时包含大写字母、小写字母和数字",
     "After successful setting, the system will automatically renew as set.": "设置成功后，系统自动以此时长进行续费",
+    "Allocated resources&#58; The resources reserved by project resource Quota are configured": "已分配资源: 按照项目资源 Quota 配置所预留出的资源",
+    "Allocation of project resources": "项目资源分布",
     "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "可用区是指在同一地域内，电力和网络互相独立的物理区域。在同一专有网络内可用区与可用区之间内网互通，可用区之间能做到故障隔离。",
     "Basic Information": "基本信息",
-    "resource overview": "资源总览",
-    "resource distribute": "资源分布",
-    "Allocated resources: The resources reserved by project resource Quota are configured": "已分配资源&#58; 按照项目资源 Quota 配置所预留出的资源",
-    "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request": "已占用资源&#58; 已分配资源中，实际通过 Kubernetes 的 Request 资源申请方式占用的部分",
-    "Node conversion formula": "节点转换公式",
-    "Core": "核",
-    "one node": "一个节点",
-    "Memory": "内存",
-    "Number of converted nodes": "转换节点数",
-    "Water Level": "水位",
-    "Memory Water Level": "内存水位",
-    "Description": "描述",
-    "Owner": "负责人",
-    "Allocation of project resources": "项目资源分布",
-    "The total number of selected resources": "筛选项资源总和",
-    "Conversion nodes": "转换节点",
-    "Total": "总计",
-    "Trend of cluster resources": "集群资源变化趋势",
-    "Daily": "每天",
-    "Weekly": "每周",
-    "Monthly": "每月",
-    "save": "保存",
-    "Project": "项目",
     "CID and GID are reserved fields of Group ID. Topic cannot start with CID and GID.": "“CID”和“GID”是Group ID的保留字段，Topic不能以“CID”和“GID”开头",
     "CIDR": "网段",
     "CIDR-tips": "支持使用 192.168.0.0/16、172.16.0.0/12、10.0.0.0/8 及其子网作为专有网络地址段，网段掩码有效范围 8-24。填写示例：192.168.0.0/16。",
     "Cloud Account": "云账户",
     "Composed of lowercase letters, numbers, underscores and hyphens, started with letter and ended with letter or number, 2~64 characters": "由小写字母、数字、下划线组成，字母开头，字母或数字结尾，5~32个字符",
+    "Conversion nodes": "转换节点",
+    "Core": "核",
+    "Daily": "每天",
+    "Description": "描述",
     "ECS status distribution": "云主机状态分布",
     "ESC billing method": "云主机付费方式分布",
     "Event Log": "事件日志",
@@ -623,22 +606,34 @@
     "GroupID-cannot-modified": "GroupID 一旦创建则无法修改。",
     "Instance is not ready": "实例尚未准备就绪",
     "Kubectl command": "Kubectl 命令行",
+    "Memory": "内存",
+    "Memory Water Level": "内存水位",
+    "Monthly": "每月",
     "NAS address": "NAS地址",
     "No service expire within {num} days.": "{num}天内无到期服务，请放心使用",
     "Node List": "节点列表",
+    "Node conversion formula": "节点转换公式",
+    "Number of converted nodes": "转换节点数",
     "OSS Overview": "OSS 总览",
+    "Occupied resource&#58; The portion of allocated resource actually occupied by Kubernetes Request resource Request": "已占用资源: 已分配资源中，实际通过 Kubernetes 的 Request 资源申请方式占用的部分",
+    "Owner": "负责人",
     "Please select the maximum number of queries": "请选择最大查询条数",
     "Pods List": "Pods 列表",
+    "Project": "项目",
     "Southeast Asia Pacific": "亚太东南",
     "Southern China": "华南",
+    "The total number of selected resources": "筛选项资源总和",
+    "Total": "总计",
+    "Trend of cluster resources": "集群资源变化趋势",
     "Use must have root permissions to initialize the machine.": "用于初始化机器的用户，需要有 root 权限",
     "VPC": "专有网络",
     "VPC Label": "VPC 标签",
     "VPC network segment addition method": "VPC网段添加方式",
     "VSwitches": "交换机",
+    "Water Level": "水位",
+    "Weekly": "每周",
     "Western United States": "美国西部",
     "Workload": "工作负载",
-    "abnormal machine": "异常机器",
     "absolute path starts with /": "绝对路径以 / 开头",
     "account name": "账户名",
     "add Alibaba Cloud Container Service Cluster (Hosted Version)": "添加阿里云容器服务集群（托管版）",
@@ -795,6 +790,7 @@
     "number of clusters": "集群数量",
     "number of nodes": "节点数",
     "offline": "离线",
+    "one node": "一个节点",
     "online": "在线",
     "operating system": "操作系统",
     "org overview": "总览",
@@ -834,6 +830,7 @@
     "process read and write times": "进程读写次数",
     "processing": "进行中",
     "production environment": "生产环境",
+    "project": "项目",
     "project label": "项目标签",
     "public read": "公共读",
     "public read and write": "公共读写",
@@ -850,12 +847,14 @@
     "related pod information": "关联Pod信息",
     "reset": "重置",
     "reset Token": "重置Token",
+    "resource distribute": "资源分布",
     "resource expire soon": "即将过期资源",
     "resource information": "资源信息",
     "resource monitor": "资源监控",
-    "resource statistics": "资源统计",
+    "resource overview": "资源总览",
     "resource type": "资源类型",
     "return to modify": "返回修改",
+    "save": "保存",
     "scale": "扩缩容",
     "schedulable": "可调度",
     "search by IP": "输入IP搜索",
@@ -867,7 +866,6 @@
     "self-built cluster": "自建集群",
     "separate by comma": "多个则用逗号分隔",
     "separate multiple tags with a comma": "以逗号,分隔多个标签",
-    "services": "服务列表",
     "set tags of {ip}": "设置{ip}的标签",
     "shared storage": "共享存储",
     "silicon valley": "硅谷",
@@ -893,7 +891,6 @@
     "support character set": "支持字符集",
     "switch network segment addition method": "交换机网段添加方式",
     "system disk": "系统盘",
-    "task list": "任务列表",
     "test environment": "测试环境",
     "the CIDR block cannot be modified after it is set": "一旦创建成功，网段不能修改。",
     "tips": "温馨提示",
@@ -1564,7 +1561,6 @@
     "please enter description within 100 characters": "请输入100字以内的描述",
     "please enter http status code ": "请输入http状态码",
     "please enter the api already in the endpoint": "请输入流量入口中已存在API",
-    "please enter the correct JSON format": "请输入正确的 JSON 格式",
     "please enter your email address, separated by comma": "请输入邮箱地址，用“,”分隔",
     "please key in numbers": "请输入数字",
     "please select a domain": "请选择域名",
