--- a/locales/en.json
+++ b/locales/en.json
@@ -36,6 +36,7 @@
     "Chengdu": "Chengdu",
     "China": "China",
     "Cloud management": "Cloud management",
+    "Cluster": "Cluster",
     "Code": "Code",
     "Config": "Config",
     "DB error": "DB error",
@@ -46,6 +47,7 @@
     "Deployment not allowed in {env} in network block period.": "during the period of network closure, deployment is prohibited in the {env}!",
     "DingTalk": "DingTalk",
     "DingTalk address": "DingTalk address",
+    "Domain": "Domain",
     "Dubai": "Dubai",
     "East China {num}": "East China {num}",
     "Enter the keyword query": "Enter the keyword query",
@@ -91,6 +93,7 @@
     "O & M report": "O & M report",
     "October": "October",
     "On this page, you can check the progress of my application to call the API request, and its specific authentication information after the application is approved.": "On this page, you can check the processing progress of my application to call the API request, and the specific authentication information of the API call after the application is passed.",
+    "Operator": "Operator",
     "Org": "Org",
     "Overview": "Overview",
     "Permanently delete {deleteItem}. Please pay special attention to it.": "Permanently delete {deleteItem}. Please pay special attention to it.",
