--- a/locales/zh.json
+++ b/locales/zh.json
@@ -36,6 +36,7 @@
     "Chengdu": "成都",
     "China": "中国",
     "Cloud management": "多云管理平台",
+    "Cluster": "集群",
     "Code": "代码",
     "Config": "配置",
     "DB error": "数据库错误",
@@ -46,6 +47,7 @@
     "Deployment not allowed in {env} in network block period.": "组织处于封网期间，{env}禁止部署！",
     "DingTalk": "钉钉",
     "DingTalk address": "钉钉地址",
+    "Domain": "域名",
     "Dubai": "迪拜",
     "East China {num}": "华东{num}",
     "Enter the keyword query": "输入关键字查询",
@@ -91,6 +93,7 @@
     "O & M report": "运维报告",
     "October": "10月",
     "On this page, you can check the progress of my application to call the API request, and its specific authentication information after the application is approved.": "本页面中可以及时查看我申请调用 API 请求的处理进度，以及申请通过后 API 调用的具体认证信息",
+    "Operator": "运维",
     "Org": "组织",
     "Overview": "总览",
     "Permanently delete {deleteItem}. Please pay special attention to it.": "永久删除{deleteItem}，请谨慎操作",
