--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -332,6 +332,7 @@
     "disk type": "disk type",
     "do you want to overwrite": "do you want to overwrite",
     "docker configs": "docker configs",
+    "domain manage": "domain manage",
     "domain name server": "domain name server",
     "domain name server address list": "domain name server address list",
     "doubled": "doubled",
