--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -332,6 +332,7 @@
     "disk type": "数据盘类型",
     "do you want to overwrite": "是否覆盖",
     "docker configs": "docker configs",
+    "domain manage": "域名管理",
     "domain name server": "域名服务器",
     "domain name server address list": "域名服务器地址列表",
     "doubled": "翻倍",
