fix(cmp): cluster dashboard org resource summary chart

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -49,7 +49,7 @@
     "6 to 32 digits, must contain letters in uppercase and lowercase and numbers": "8到32位，需同时包含大写字母、小写字母和数字",
     "After successful setting, the system will automatically renew as set.": "设置成功后，系统自动以此时长进行续费",
     "Alibaba Cloud container service cluster": "阿里云容器服务集群",
-    "Allocated resources&#58; The resources reserved by project resource Quota are configured": "已分配资源&#58; 按照项目资源 Quota 配置所预留出的资源",
+    "Allocated resources&#58; The resources reserved by project resource Quota are configured": "已分配资源: 按照项目资源 Quota 配置所预留出的资源",
     "Allocation of project resources": "项目资源分布",
     "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "可用区是指在同一地域内，电力和网络互相独立的物理区域。在同一专有网络内可用区与可用区之间内网互通，可用区之间能做到故障隔离。",
     "Basic Information": "基本信息",
@@ -112,7 +112,7 @@
     "O&M dashboard added successfully": "添加运维大盘成功",
     "O&M dashboard updated successfully": "更新运维大盘成功",
     "OSS Overview": "OSS 总览",
-    "Occupied resource&#58; The portion of allocated resource actually occupied by Kubernetes Request resource Request": "已占用资源&#58; 已分配资源中，实际通过 Kubernetes 的 Request 资源申请方式占用的部分",
+    "Occupied resource&#58; The portion of allocated resource actually occupied by Kubernetes Request resource Request": "已占用资源: 已分配资源中，实际通过 Kubernetes 的 Request 资源申请方式占用的部分",
     "Operation log retention days": "操作日志保留天数",
     "Owner": "负责人",
     "Pay-As-You-Go": "按量付费",
