--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2162,6 +2162,7 @@
     "filter by path name": "filter by path name",
     "filter by registration type": "filter by registration type",
     "filter by service": "filter by service",
+    "filter content": "filter content",
     "find the authorization interface": "find the authorization interface",
     "first paint time": "first paint time",
     "first trigger": "first trigger",
@@ -2185,6 +2186,7 @@
     "grayscale release": "grayscale release",
     "header-X-App-Key": "use the appKey field as the request argument named \"appKey\" or the request header named \"X-App-Key\"",
     "hide no rule interface": "hide no rule interface",
+    "highlight": "highlight",
     "historical downtime": "historical downtime",
     "history available time": "history available time",
     "hot spot analysis": "hot spot analysis",
@@ -2222,6 +2224,7 @@
     "limit type": "limit type",
     "limited flow strategy": "limited flow strategy",
     "link information": "link information",
+    "live tail": "live tail",
     "load event": "load event",
     "location analysis": "location analysis",
     "location block configuration": "location block configuration",
@@ -2471,6 +2474,8 @@
     "transmission analysis": "transmission analysis",
     "transmission traffic": "transmission traffic",
     "transport bytes(KBytes)": "transport bytes(KBytes)",
+    "type filter string, press the Enter key": "type filter string, press the Enter key",
+    "type highlight string, press the Enter key": "type highlight string, press the Enter key",
     "uniform domain name entry": "uniform domain name entry",
     "update configuration": "update configuration",
     "update period": "update period",
